# ricekit-community

./: .gitmodules  CONTRIBUTING.md  README.md
.github/badges/: userstyles-custom.json  userstyles-upstream.json
.github/workflows/: bump-userstyles-upstream.yml  check-userstyles-build.yml  release-content.yml  userstyles-stats.yml  validate.yml
extensions/firefox/: LICENSE  Makefile  api-sheet.js  api.js  background.js  manifest.json  schema-sheet.json  schema.json
templates/aerospace-colors/: config.toml
templates/alacritty-colors/: config.toml
templates/firefox-colors/: config.toml
templates/ghostty-colors/: config.toml
templates/jankyborders-colors/: config.toml
templates/neovim-colors/: config.toml
templates/sketchybar-colors/: config.toml
templates/starship-colors/: config.toml
templates/tmux-colors/: config.toml
templates/userstyles/: config.toml
templates/wezterm-colors/: config.toml
templates/wezterm-config/: config.toml
templates/zen-colors/: config.toml
themes/catppuccin-latte/: theme.toml
themes/catppuccin-mocha/: theme.toml
themes/dracula/: theme.toml
themes/ethereal/: theme.toml
themes/everforest/: theme.toml
themes/flexoki-light/: theme.toml
themes/gruvbox-dark/: theme.toml
themes/hackerman/: theme.toml
themes/kanagawa/: theme.toml
themes/matte-black/: theme.toml
themes/nord/: theme.toml
themes/osaka-jade/: theme.toml
themes/ristretto/: theme.toml
userstyles/: .gitignore  LICENSE  README.md  deno.json
validator/: Cargo.toml  LICENSE  README.md
validator/src/: lib.rs  main.rs
(+37 files in other folders)
