[package]
name = "ricekit-validate"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Schema validator for Ricekit community themes and config templates"
repository = "https://github.com/brs98/ricekit-community"
readme = "README.md"

[[bin]]
name = "ricekit-validate"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
